# vendor_qcom_opensource_arpal-lx-sm8650

./: Android.mk  Makefile.am  Pal.cpp  PalCommon.h  configure.ac
adsprpcd/: adsprpcd.c
configs/anorak/: mixer_paths_anorak_idp.xml  mixer_paths_anorak_qxr.xml
configs/kalama/: resourcemanager_kalama_cdp.xml  resourcemanager_kalama_grd.xml  resourcemanager_kalama_mtp.xml  resourcemanager_kalama_qrd.xml  usecaseKvManager.xml
configs/pineapple/: Hapticsconfig.xml  card-defs.xml  mixer_paths_cliffs_mtp.xml  mixer_paths_cliffs_qrd.xml  mixer_paths_pineapple_aim.xml  mixer_paths_pineapple_cdp.xml  mixer_paths_pineapple_cdp_wsa883x.xml  mixer_paths_pineapple_grd.xml  mixer_paths_pineapple_mtp.xml  mixer_paths_pineapple_qrd.xml  mixer_paths_pineapple_qrd_sku2.xml  resourcemanager_cliffs_cdp.xml  resourcemanager_cliffs_mtp.xml  resourcemanager_cliffs_mtp_wcd9395.xml  resourcemanager_cliffs_qrd.xml  resourcemanager_pineapple_aim.xml  resourcemanager_pineapple_cdp.xml  resourcemanager_pineapple_grd.xml  resourcemanager_pineapple_mtp.xml  resourcemanager_pineapple_qrd.xml  resourcemanager_pineapple_qrd_sku2.xml  usecaseKvManager.xml
configs/pitti/: card-defs.xml  mixer_paths_pitti_idp.xml  mixer_paths_pitti_qrd.xml  resourcemanager_pitti_idp.xml  resourcemanager_pitti_qrd.xml
configs/qcm6490/: mixer_paths_qcm6490_idp.xml  mixer_paths_qcm6490_rb3.xml  mixer_paths_qcm6490_rb3_vc.xml  mixer_paths_qcm6490_rb3_video.xml  mixer_paths_qcm6490_rb3_vision.xml  resourcemanager_qcm6490_idp.xml  resourcemanager_qcm6490_rb3.xml  resourcemanager_qcm6490_rb3_vc.xml  resourcemanager_qcm6490_rb3_video.xml  resourcemanager_qcm6490_rb3_vision.xml  usecaseKvManager.xml
configs/volcano/: card-defs.xml  mixer_paths_volcano6_mtp_wsa883x_wcd939x.xml  mixer_paths_volcano_cdp_wsa883x_wcd939x.xml  mixer_paths_volcano_cdp_wsa883x_wcd939x_sku1.xml  mixer_paths_volcano_mtp.xml  mixer_paths_volcano_mtp_sku1.xml  mixer_paths_volcano_mtp_wsa883x_wcd939x_sku1.xml  mixer_paths_volcano_qrd.xml  mixer_paths_volcano_qrd_sku1.xml  resourcemanager_volcano_cdp_wsa883x_wcd939x.xml  resourcemanager_volcano_cdp_wsa883x_wcd939x_sku1.xml  resourcemanager_volcano_mtp.xml  resourcemanager_volcano_mtp_sku1.xml  resourcemanager_volcano_mtp_wsa883x_wcd939x.xml  resourcemanager_volcano_qrd.xml  resourcemanager_volcano_qrd_sku1.xml  usecaseKvManager.xml
context_manager/inc/: ContextManager.h
context_manager/src/: ContextManager.cpp
device/inc/: Bluetooth.h  Device.h  HdmiIn.h  RTProxy.h  SpeakerProtection.h  USBAudio.h
device/src/: Bluetooth.cpp  Device.cpp  HapticsDev.cpp  HapticsDevProtection.cpp  HdmiIn.cpp  RTProxy.cpp  SpeakerProtection.cpp  USBAudio.cpp
inc/: Makefile.am  PalDefs.h  configure.ac  pal-headers.pc.in
ipc/HwBinders/interfaces/pal/: current.txt
ipc/HwBinders/interfaces/pal/1.0/: types.hal
ipc/HwBinders/pal_ipc_client/: Android.mk
ipc/HwBinders/pal_ipc_client/src/: pal_client_wrapper.cpp
ipc/HwBinders/pal_ipc_server/: Android.mk
ipc/HwBinders/pal_ipc_server/src/: pal_server_wrapper.cpp
plugins/codecs/: bt_aptx.c  bt_aptx.h  bt_base.c  bt_base.h  bt_ble.c  bt_bundle.c  bt_bundle.h  bt_intf.h
plugins/customva_intf/: Android.mk
plugins/customva_intf/inc/: CustomVAInterface.h
plugins/customva_intf/src/: CustomVAInterface.cpp
plugins/hotword_intf/: Android.mk
plugins/hotword_intf/inc/: HotwordInterface.h
plugins/hotword_intf/src/: HotwordInterface.cpp
resource_manager/inc/: ResourceManager.h
resource_manager/src/: ResourceManager.cpp  SndCardMonitor.cpp
session/inc/: PayloadBuilder.h  Session.h  SessionAlsaCompress.h  SessionAlsaPcm.h  SessionAlsaUtils.h  SessionAlsaVoice.h  SoundTriggerEngine.h  SoundTriggerEngineCapi.h  SoundTriggerEngineGsl.h  kvh2xml.h
session/src/: ACDEngine.cpp  PayloadBuilder.cpp  Session.cpp  SessionAgm.cpp  SessionAlsaCompress.cpp  SessionAlsaPcm.cpp  SessionAlsaUtils.cpp  SessionAlsaVoice.cpp  SoundTriggerEngineCapi.cpp  SoundTriggerEngineGsl.cpp
stream/inc/: Stream.h  StreamACD.h  StreamHaptics.h  StreamInCall.h  StreamSoundTrigger.h  StreamUltraSound.h
stream/src/: Stream.cpp  StreamACD.cpp  StreamCommon.cpp  StreamCommonProxy.cpp  StreamCompress.cpp  StreamHaptics.cpp  StreamInCall.cpp  StreamNonTunnel.cpp  StreamPCM.cpp  StreamSensorPCMData.cpp  StreamSoundTrigger.cpp  StreamUltraSound.cpp
utils/inc/: CustomVAInterface.h  HotwordInterface.h  MemLogBuilder.h  PalRingBuffer.h  SVAInterface.h  SoundTriggerPlatformInfo.h  SoundTriggerUtils.h  VoiceUIInterface.h  VoiceUIPlatformInfo.h
utils/src/: AudioHapticsInterface.cpp  CustomVAInterface.cpp  HotwordInterface.cpp  PalRingBuffer.cpp  SVAInterface.cpp  SoundTriggerPlatformInfo.cpp  SoundTriggerUtils.cpp  VoiceUIInterface.cpp  VoiceUIPlatformInfo.cpp
